--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
@@ -17,8 +18,9 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.14.8",
+        "@alpinejs/persist": "^3.14.8",
         "@headlessui/vue": "^1.7.23",
-        "@heroicons/vue": "^2.2.0",
-        "@tailwindcss/forms": "^0.5.10"
+        "@heroicons/vue": "^2.2.0"
     }
 }
