add new account mailtrap

--- a/.env
+++ b/.env
@@ -48,11 +48,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
  
 # Looking to send emails in production? Check out our Email API/SMTP product!
+# Looking to send emails in production? Check out our Email API/SMTP product!
+# Looking to send emails in production? Check out our Email API/SMTP product!
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=3a2ef4fd766611
-MAIL_PASSWORD=06e2be81bcb879
+MAIL_USERNAME=fa4ca037c87308
+MAIL_PASSWORD=2caa8d3f9d741e
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
